--- a/themes/rcforward/sass/_hamburger.scss
+++ b/themes/rcforward/sass/_hamburger.scss
@@ -301,3 +301,11 @@
           display: none;
         }
   }
+  .menu-item-has-children::after{
+font-family: "Font Awesome 5 Free"; 
+font-weight: 900; 
+content: "\f107";
+color:white;
+  }
+
+  
