--- a/themes/rcforward/sass/_navigation.scss
+++ b/themes/rcforward/sass/_navigation.scss
@@ -6,13 +6,11 @@
   @include desktop{
     .menu-item-has-children {
         position: relative;
-      .sub-menu{    list-style: none;
+      .sub-menu{    
+        list-style: none;
               padding: 0;
-              // height:0;
-              // overflow: hidden;
               display: none;}
       &:hover {
-
         > .sub-menu {
           position: absolute;
           right: 0;
@@ -67,14 +65,15 @@
 
           .menu-item {
             border-top: 1px solid $white;
-            padding-top: 20px;
-            padding-bottom: 20px;
+         
             @include tablet {
               border: none;
               display: inline-flex;
             }
             a {
               color: $white;
+              padding:10px;
+                  display: block;
               @include tablet {
                 display: block;
                 padding: 14px 16px;
@@ -82,7 +81,8 @@
               }
             }
             .sub-menu {
-          
+          padding:0;
+          display: none;
               li {
                 background: white;
                 border-bottom: 1px solid $credible__blue;
