--- a/themes/rcforward/sass/style.scss
+++ b/themes/rcforward/sass/style.scss
@@ -68,5 +68,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "charity";
 @import "footer";
 @import "front-page";
+@import "contact-page";
+
 
 
