--- a/themes/rcforward/sass/_hamburger.scss
+++ b/themes/rcforward/sass/_hamburger.scss
@@ -294,18 +294,43 @@
 
   .hamburger--boring{
     background: $credible__blue;
-    
         border: none;
         padding-right:25px;
-        @include tablet{
+        @include desktop{
           display: none;
         }
   }
   .menu-item-has-children::after{
-font-family: "Font Awesome 5 Free"; 
-font-weight: 900; 
-content: "\f107";
-color:white;
+    content: "\f078";
+ font-family: Font Awesome\ 5 Free;
+    font-weight: 900;
+    right: 2em;
+    color: white;
+    top: 30%;
+    font-size: 24px;
+    position: absolute;
+@include desktop{
+  display: none;
+}
   }
+   .menu-item-has-children::before{
+
+    content: "\f077";
+    font-family: Font Awesome\ 5 Free;
+    display: none;
+    font-weight: 900;
+    right: 2em;
+    color: white;
+    top: 30%;
+    font-size: 24px;
+    position: absolute;
+@include desktop{
+  display: none;
+}
+  }
+.rotate {
+    transform: rotate(90deg);
+    transition: .3s;
+}
 
   
